# vote-aggregator

./: .eslintignore  .gitignore  Anchor.toml  README.md  Test.toml  bun.lockb  package.json  pnpm-lock.yaml
programs/vote-aggregator/: Cargo.toml
programs/vote-aggregator/src/: error.rs  lib.rs
programs/vote-aggregator/src/events/: clan.rs  member.rs  mod.rs  root.rs
programs/vote-aggregator/src/processor/: mod.rs
programs/vote-aggregator/src/processor/clan/: configure_clan.rs  create.rs  create_clan.rs  forced_cancel_proposal.rs  mod.rs  resize_clan.rs  set_clan_owner.rs  set_voting_delegate.rs  update_clan.rs  update_proposal_vote.rs
programs/vote-aggregator/src/processor/member/: create_member.rs  exit_clan.rs  join_clan.rs  leave_clan.rs  mod.rs  set_voter_weight_record.rs  start_leaving_clan.rs  update_voter_weight.rs
programs/vote-aggregator/src/processor/root/: configure_root.rs  create.rs  create_root.rs  mod.rs  set_voting_weight_plugin.rs  update_root.rs
programs/vote-aggregator/src/state/: clan.rs  clan_vwr.rs  max_vwr.rs  member.rs  mod.rs  root.rs
scripts/: runTests.sh
