[package]
name = "vote-aggregator"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vote_aggregator"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0", features = ["governance"] }
spl-governance = { git = "https://github.com/solana-labs/solana-program-library.git", rev = "9e6ab03a77c4e9d1b949e51abcf87ced73c27f98", features = [
    "no-entrypoint",
] }
